--- a/falegnameria-ristrutturazioni-roma.html
+++ b/falegnameria-ristrutturazioni-roma.html
@@ -6,8 +6,8 @@
 
     <!-- SEO Meta Tags -->
     <title>Falegnameria e Ristrutturazioni Roma | Legno & Casa Roma - Servizi in Tutta la Provincia</title>
-    <meta name="description" content="Falegnameria e ristrutturazioni a Roma e provincia. Legno & Casa Roma offre mobili su misura, cucine, scale, pittura e lavori edili. Sopralluogo gratuito in tutti i quartieri.">
-    <meta name="keywords" content="falegnameria Roma, ristrutturazioni Roma, mobili su misura Roma, cucine legno Roma, scale legno Roma, pittore Roma, impresa edile Roma, falegname Roma Prati, falegname Roma Trastevere, falegname Roma EUR">
+    <meta name="description" content="Falegnameria e ristrutturazioni a Roma e provincia. Legno & Casa Roma offre mobili su misura, pergole, gazebo, scale, pittura e lavori edili. Sopralluogo gratuito in tutti i quartieri.">
+    <meta name="keywords" content="falegnameria Roma, ristrutturazioni Roma, mobili su misura Roma, pergole legno Roma, gazebo Roma, scale legno Roma, pittore Roma, impresa edile Roma, falegname Roma Prati, falegname Roma Trastevere, falegname Roma EUR">
     <meta name="author" content="Legno & Casa Roma">
     <meta name="robots" content="index, follow">
     <meta name="geo.region" content="IT-RM">
@@ -18,7 +18,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://[NUOVO-DOMINIO]/falegnameria-ristrutturazioni-roma.html">
     <meta property="og:title" content="Falegnameria e Ristrutturazioni Roma | Legno & Casa Roma">
-    <meta property="og:description" content="Falegnameria e ristrutturazioni a Roma. Mobili su misura, cucine, scale, pittura e lavori edili. Sopralluogo gratuito.">
+    <meta property="og:description" content="Falegnameria e ristrutturazioni a Roma. Mobili su misura, pergole, gazebo, scale, pittura e lavori edili. Sopralluogo gratuito.">
     <meta property="og:image" content="https://[NUOVO-DOMINIO]/images/og-image.jpg">
     <meta property="og:locale" content="it_IT">
 
@@ -55,10 +55,10 @@
         "@context": "https://schema.org",
         "@type": "HomeAndConstructionBusiness",
         "name": "Legno & Casa Roma",
-        "description": "Falegnameria artigianale e ristrutturazioni a Roma e provincia. Mobili su misura, cucine, scale, pittura e lavori edili.",
+        "description": "Falegnameria artigianale e ristrutturazioni a Roma e provincia. Mobili su misura, pergole, gazebo, scale, pittura e lavori edili.",
         "url": "https://[NUOVO-DOMINIO]/falegnameria-ristrutturazioni-roma.html",
-        "telephone": "[TELEFONO]",
-        "email": "[EMAIL]",
+        "telephone": "+39 328 057 2349",
+        "email": "lozanazar84@gmail.com",
         "address": {
             "@type": "PostalAddress",
             "addressLocality": "Roma",
@@ -86,7 +86,7 @@
                 <li><a href="guide.html" class="nav-link">Guide</a></li>
                 <li><a href="index.html#contatti" class="nav-link">Contatti</a></li>
             </ul>
-            <a href="tel:[TELEFONO]" class="nav-cta">
+            <a href="tel:+39 328 057 2349" class="nav-cta">
                 <i class="fas fa-phone"></i>
                 <span>Chiama Ora</span>
             </a>
@@ -103,7 +103,7 @@
         <div class="container">
             <div class="page-hero-content" data-aos="fade-up">
                 <h1>Falegnameria e Ristrutturazioni <span class="gradient-text">Roma e Provincia</span></h1>
-                <p class="hero-description">Artigiani del legno e impresa edile a Roma. Realizziamo mobili su misura, cucine, scale, decorazioni pareti, pittura e ristrutturazioni in tutti i quartieri e comuni della provincia.</p>
+                <p class="hero-description">Artigiani del legno e impresa edile a Roma. Realizziamo mobili su misura, pergole, gazebo, scale, decorazioni pareti, pittura e ristrutturazioni in tutti i quartieri e comuni della provincia.</p>
                 <div class="hero-buttons">
                     <a href="index.html#contatti" class="btn btn-primary">
                         <span>Sopralluogo Gratuito</span>
@@ -126,7 +126,7 @@
                 </div>
                 <div class="intro-content" style="max-width: 800px; margin: 0 auto; text-align: center;" data-aos="fade-up">
                     <p style="font-size: 18px; line-height: 1.8; color: var(--gray-700); margin-bottom: 20px;"><strong>Legno & Casa Roma</strong> è un team di artigiani qualificati specializzati in falegnameria su misura e ristrutturazioni edili. Operiamo a Roma e in tutta la provincia, portando la nostra esperienza e passione direttamente a casa tua.</p>
-                    <p style="font-size: 18px; line-height: 1.8; color: var(--gray-700);">Che tu abbia bisogno di un mobile in legno su misura, di una cucina artigianale, di rinnovare le pareti con boiserie o di ristrutturare completamente casa, siamo il partner giusto per realizzare il tuo progetto.</p>
+                    <p style="font-size: 18px; line-height: 1.8; color: var(--gray-700);">Che tu abbia bisogno di un mobile in legno su misura, di una pergola per il giardino, di rinnovare le pareti con boiserie o di ristrutturare completamente casa, siamo il partner giusto per realizzare il tuo progetto.</p>
                 </div>
             </div>
         </section>
@@ -146,12 +146,12 @@
                         <p style="color: var(--gray-600); margin-bottom: 15px;">Letti, scale, librerie, armadi e mobili in legno massello realizzati su misura.</p>
                         <span style="color: var(--primary); font-weight: 600;">Scopri di più <i class="fas fa-arrow-right"></i></span>
                     </a>
-                    <a href="servizi/cucine-legno.html" class="service-card-link" data-aos="fade-up" data-aos-delay="100" style="text-decoration: none; background: white; border-radius: 12px; padding: 30px; text-align: center; transition: transform 0.3s, box-shadow 0.3s;">
+                    <a href="servizi/pergole-gazebo.html" class="service-card-link" data-aos="fade-up" data-aos-delay="100" style="text-decoration: none; background: white; border-radius: 12px; padding: 30px; text-align: center; transition: transform 0.3s, box-shadow 0.3s;">
                         <div style="width: 70px; height: 70px; background: var(--primary); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 20px;">
-                            <i class="fas fa-utensils" style="color: white; font-size: 28px;"></i>
+                            <i class="fas fa-campground" style="color: white; font-size: 28px;"></i>
                         </div>
-                        <h3 style="color: var(--dark); margin-bottom: 10px;">Cucine in Legno</h3>
-                        <p style="color: var(--gray-600); margin-bottom: 15px;">Cucine artigianali in legno massello progettate per i tuoi spazi.</p>
+                        <h3 style="color: var(--dark); margin-bottom: 10px;">Pergole e Gazebo</h3>
+                        <p style="color: var(--gray-600); margin-bottom: 15px;">Strutture esterne in legno per giardini e terrazzi.</p>
                         <span style="color: var(--primary); font-weight: 600;">Scopri di più <i class="fas fa-arrow-right"></i></span>
                     </a>
                     <a href="servizi/pittura-decorazioni.html" class="service-card-link" data-aos="fade-up" data-aos-delay="200" style="text-decoration: none; background: white; border-radius: 12px; padding: 30px; text-align: center; transition: transform 0.3s, box-shadow 0.3s;">
@@ -248,11 +248,11 @@
                     <h2 style="font-size: 36px; margin-bottom: 20px;">Hai un progetto a Roma?</h2>
                     <p style="font-size: 18px; margin-bottom: 30px; opacity: 0.9;">Contattaci per un sopralluogo e preventivo gratuito. Operiamo in tutti i quartieri di Roma e provincia.</p>
                     <div class="cta-buttons" style="display: flex; gap: 20px; justify-content: center; flex-wrap: wrap;">
-                        <a href="tel:[TELEFONO]" class="btn" style="background: white; color: var(--primary); padding: 15px 30px; border-radius: 8px; font-weight: 600; text-decoration: none; display: inline-flex; align-items: center; gap: 10px;">
+                        <a href="tel:+39 328 057 2349" class="btn" style="background: white; color: var(--primary); padding: 15px 30px; border-radius: 8px; font-weight: 600; text-decoration: none; display: inline-flex; align-items: center; gap: 10px;">
                             <i class="fas fa-phone"></i>
-                            <span>[TELEFONO]</span>
+                            <span>+39 328 057 2349</span>
                         </a>
-                        <a href="https://wa.me/39[TELEFONO]" class="btn" style="background: #25D366; color: white; padding: 15px 30px; border-radius: 8px; font-weight: 600; text-decoration: none; display: inline-flex; align-items: center; gap: 10px;">
+                        <a href="https://wa.me/393280572349" class="btn" style="background: #25D366; color: white; padding: 15px 30px; border-radius: 8px; font-weight: 600; text-decoration: none; display: inline-flex; align-items: center; gap: 10px;">
                             <i class="fab fa-whatsapp"></i>
                             <span>WhatsApp</span>
                         </a>
