--- a/guide.html
+++ b/guide.html
@@ -117,7 +117,7 @@
                 <li><a href="guide.html" class="nav-link active">Guide</a></li>
                 <li><a href="index.html#contatti" class="nav-link">Contatti</a></li>
             </ul>
-            <a href="tel:[TELEFONO]" class="nav-cta">
+            <a href="tel:+39 328 057 2349" class="nav-cta">
                 <i class="fas fa-phone"></i>
                 <span>Chiamaci</span>
             </a>
@@ -132,7 +132,7 @@
     <!-- Main Content -->
     <main id="main-content">
         <!-- Page Header -->
-        <section class="page-header" style="padding: 150px 0 80px; background: var(--gradient-dark);">
+        <section class="page-header" style="padding: 150px 0 80px; background: linear-gradient(135deg, rgba(139, 69, 19, 0.85) 0%, rgba(26, 26, 46, 0.85) 100%), url('images/work/hero.webp') center/cover no-repeat;">
             <div class="container">
                 <div class="section-header" data-aos="fade-up">
                     <span class="section-subtitle">Guide e Consigli</span>
@@ -284,11 +284,11 @@
                         <ul>
                             <li>
                                 <i class="fas fa-phone-alt"></i>
-                                <a href="tel:[TELEFONO]">[TELEFONO]</a>
+                                <a href="tel:+39 328 057 2349">+39 328 057 2349</a>
                             </li>
                             <li>
                                 <i class="fas fa-envelope"></i>
-                                <a href="mailto:[EMAIL]">[EMAIL]</a>
+                                <a href="mailto:lozanazar84@gmail.com">lozanazar84@gmail.com</a>
                             </li>
                             <li>
                                 <i class="fas fa-map-marker-alt"></i>
@@ -311,11 +311,11 @@
         <button class="back-to-top" aria-label="Torna su">
             <i class="fas fa-chevron-up"></i>
         </button>
-        <a href="https://wa.me/39[TELEFONO]" class="sticky-whatsapp" aria-label="Scrivici su WhatsApp" target="_blank" rel="noopener">
+        <a href="https://wa.me/393280572349" class="sticky-whatsapp" aria-label="Scrivici su WhatsApp" target="_blank" rel="noopener">
             <i class="fab fa-whatsapp"></i>
             <span class="whatsapp-tooltip">Scrivici su WhatsApp!</span>
         </a>
-        <a href="tel:[TELEFONO]" class="sticky-phone" aria-label="Chiamaci">
+        <a href="tel:+39 328 057 2349" class="sticky-phone" aria-label="Chiamaci">
             <i class="fas fa-phone-alt"></i>
             <span class="phone-tooltip">Chiamaci ora!</span>
         </a>
