--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags  -->
-    <title>Falegnameria e Ristrutturazioni Roma | Legno & Casa Roma - Mobili su Misura, Cucine, Scale</title>
-    <meta name="description" content="Falegnameria artigianale a Roma. Legno & Casa Roma realizza letti, scale, cucine e mobili su misura. Ristrutturazioni, decorazioni pareti e pittura. Preventivi gratuiti.">
-    <meta name="keywords" content="falegnameria Roma, mobili su misura Roma, cucine in legno Roma, scale in legno Roma, letti artigianali Roma, ristrutturazioni Roma, decorazioni pareti Roma, pittura Roma, carpenteria Roma, mobili artigianali Roma, falegname Roma, costruzioni Roma">
+    <title>Falegnameria e Ristrutturazioni Roma | Legno & Casa Roma - Mobili su Misura, Pergole, Scale</title>
+    <meta name="description" content="Falegnameria artigianale a Roma. Legno & Casa Roma realizza letti, scale, pergole, gazebo e mobili su misura. Ristrutturazioni, decorazioni pareti e pittura. Preventivi gratuiti.">
+    <meta name="keywords" content="falegnameria Roma, mobili su misura Roma, pergole in legno Roma, gazebo Roma, scale in legno Roma, letti artigianali Roma, ristrutturazioni Roma, decorazioni pareti Roma, pittura Roma, carpenteria Roma, mobili artigianali Roma, falegname Roma, costruzioni Roma">
     <meta name="author" content="Legno & Casa Roma">
     <meta name="robots" content="index, follow">
     <meta name="geo.region" content="IT-RM">
@@ -78,8 +78,8 @@
         "name": "Legno & Casa Roma",
         "description": "Falegnameria artigianale e ristrutturazioni a Roma. Realizziamo mobili su misura, cucine, scale, letti in legno. Servizi di pittura e decorazioni pareti.",
         "url": "https://[NUOVO-DOMINIO]",
-        "telephone": "[TELEFONO]",
-        "email": "[EMAIL]",
+        "telephone": "+39 328 057 2349",
+        "email": "lozanazar84@gmail.com",
         "address": {
             "@type": "PostalAddress",
             "streetAddress": "[INDIRIZZO]",
@@ -146,7 +146,8 @@
         "serviceType": [
             "Falegnameria su misura",
             "Mobili in legno",
-            "Cucine in legno",
+            "Pergole in legno",
+            "Gazebo in legno",
             "Scale in legno",
             "Letti artigianali",
             "Decorazioni pareti",
@@ -218,7 +219,7 @@
                     "@type": "Offer",
                     "itemOffered": {
                         "@type": "Service",
-                        "name": "Cucine in Legno Roma"
+                        "name": "Pergole e Gazebo in Legno Roma"
                     }
                 },
                 {
@@ -332,7 +333,7 @@
                 <li><a href="guide.html" class="nav-link">Guide</a></li>
                 <li><a href="#contatti" class="nav-link">Contatti</a></li>
             </ul>
-            <a href="tel:[TELEFONO]" class="nav-cta">
+            <a href="tel:+39 328 057 2349" class="nav-cta">
                 <i class="fas fa-phone"></i>
                 <span>Chiamaci</span>
             </a>
@@ -472,23 +473,23 @@
                     </div>
                 </div>
 
-                <!-- Servizio 2: Cucine in Legno -->
+                <!-- Servizio 2: Pergole e Gazebo -->
                 <div class="service-card" data-aos="fade-up" data-aos-delay="200">
                     <div class="service-image">
-                        <img src="images/work/11.webp" alt="Cucine in legno su misura Roma" width="600" height="400" loading="lazy">
+                        <img src="images/work/13.webp" alt="Pergole e gazebo in legno Roma" width="600" height="400" loading="lazy">
                         <div class="service-overlay">
-                            <a href="servizi/cucine-legno.html" class="service-btn">Scopri di più</a>
+                            <a href="servizi/pergole-gazebo.html" class="service-btn">Scopri di più</a>
                         </div>
                     </div>
                     <div class="service-content">
                         <div class="service-icon">
-                            <i class="fas fa-utensils"></i>
+                            <i class="fas fa-campground"></i>
                         </div>
-                        <h3>Cucine in Legno</h3>
-                        <p>Cucine artigianali in legno massello, progettate e realizzate su misura per il tuo spazio. Design italiano, materiali pregiati e funzionalità al primo posto.</p>
+                        <h3>Pergole e Gazebo</h3>
+                        <p>Pergole, gazebo e strutture esterne in legno massello, progettate su misura per il tuo giardino o terrazzo. Qualita artigianale e materiali resistenti.</p>
                         <ul class="service-features">
-                            <li><i class="fas fa-check"></i> Progettazione personalizzata</li>
-                            <li><i class="fas fa-check"></i> Legno massello italiano</li>
+                            <li><i class="fas fa-check"></i> Strutture su misura</li>
+                            <li><i class="fas fa-check"></i> Legno trattato per esterni</li>
                             <li><i class="fas fa-check"></i> Installazione completa</li>
                         </ul>
                     </div>
@@ -497,7 +498,7 @@
                 <!-- Servizio 3: Decorazioni Pareti e Pittura -->
                 <div class="service-card" data-aos="fade-up" data-aos-delay="300">
                     <div class="service-image">
-                        <img src="https://images.unsplash.com/photo-1562259949-e8e7689d7828?w=600&q=75" alt="Decorazioni pareti e pittura Roma" width="600" height="400" loading="lazy">
+                        <img src="images/work/17.webp" alt="Decorazioni pareti e pittura Roma" width="600" height="400" loading="lazy">
                         <div class="service-overlay">
                             <a href="servizi/pittura-decorazioni.html" class="service-btn">Scopri di più</a>
                         </div>
@@ -519,7 +520,7 @@
                 <!-- Servizio 4: Costruzioni e Ristrutturazioni -->
                 <div class="service-card" data-aos="fade-up" data-aos-delay="400">
                     <div class="service-image">
-                        <img src="https://images.unsplash.com/photo-1503387762-592deb58ef4e?w=600&q=75" alt="Costruzioni e ristrutturazioni Roma" width="600" height="400" loading="lazy">
+                        <img src="images/work/14.webp" alt="Costruzioni e ristrutturazioni Roma" width="600" height="400" loading="lazy">
                         <div class="service-overlay">
                             <a href="servizi/costruzioni-ristrutturazioni.html" class="service-btn">Scopri di più</a>
                         </div>
@@ -643,6 +644,138 @@
                             <div class="portfolio-overlay">
                                 <span class="portfolio-category">Arredamento</span>
                                 <h4>Complemento d'arredo</h4>
+                                <p>Roma</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Slide 9 -->
+                    <div class="portfolio-slide">
+                        <div class="portfolio-image">
+                            <img src="images/work/12.webp" alt="Tavolino design in legno Roma" width="400" height="300" loading="lazy">
+                            <div class="portfolio-overlay">
+                                <span class="portfolio-category">Design</span>
+                                <h4>Tavolino con incastri</h4>
+                                <p>Roma</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Slide 10 -->
+                    <div class="portfolio-slide">
+                        <div class="portfolio-image">
+                            <img src="images/work/15.webp" alt="Poltrona in legno con libreria Roma" width="400" height="300" loading="lazy">
+                            <div class="portfolio-overlay">
+                                <span class="portfolio-category">Falegnameria</span>
+                                <h4>Seduta con libreria</h4>
+                                <p>Roma</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Slide 11 -->
+                    <div class="portfolio-slide">
+                        <div class="portfolio-image">
+                            <img src="images/work/16.webp" alt="Libreria in legno massello Roma" width="400" height="300" loading="lazy">
+                            <div class="portfolio-overlay">
+                                <span class="portfolio-category">Mobili</span>
+                                <h4>Libreria su misura</h4>
+                                <p>Roma</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Slide 12 -->
+                    <div class="portfolio-slide">
+                        <div class="portfolio-image">
+                            <img src="images/work/18.webp" alt="Mobile ingresso in legno Roma" width="400" height="300" loading="lazy">
+                            <div class="portfolio-overlay">
+                                <span class="portfolio-category">Arredamento</span>
+                                <h4>Mobile ingresso rustico</h4>
+                                <p>Roma</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Slide 13 -->
+                    <div class="portfolio-slide">
+                        <div class="portfolio-image">
+                            <img src="images/work/19.webp" alt="Gazebo in legno Roma" width="400" height="300" loading="lazy">
+                            <div class="portfolio-overlay">
+                                <span class="portfolio-category">Esterni</span>
+                                <h4>Gazebo in legno</h4>
+                                <p>Roma</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Slide 14 -->
+                    <div class="portfolio-slide">
+                        <div class="portfolio-image">
+                            <img src="images/work/20.webp" alt="Tavolino rotondo in legno Roma" width="400" height="300" loading="lazy">
+                            <div class="portfolio-overlay">
+                                <span class="portfolio-category">Design</span>
+                                <h4>Tavolino rotondo</h4>
+                                <p>Roma</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Slide 15 -->
+                    <div class="portfolio-slide">
+                        <div class="portfolio-image">
+                            <img src="images/work/21.webp" alt="Ristrutturazione interni Roma" width="400" height="300" loading="lazy">
+                            <div class="portfolio-overlay">
+                                <span class="portfolio-category">Interni</span>
+                                <h4>Ristrutturazione ingresso</h4>
+                                <p>Roma</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Slide 16 -->
+                    <div class="portfolio-slide">
+                        <div class="portfolio-image">
+                            <img src="images/work/22.webp" alt="Gazebo in legno Roma" width="400" height="300" loading="lazy">
+                            <div class="portfolio-overlay">
+                                <span class="portfolio-category">Esterni</span>
+                                <h4>Gazebo con tetto</h4>
+                                <p>Roma</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Slide 17 -->
+                    <div class="portfolio-slide">
+                        <div class="portfolio-image">
+                            <img src="images/work/23.webp" alt="Gazebo decorativo in legno Roma" width="400" height="300" loading="lazy">
+                            <div class="portfolio-overlay">
+                                <span class="portfolio-category">Esterni</span>
+                                <h4>Gazebo con grigliato</h4>
+                                <p>Roma</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Slide 18 -->
+                    <div class="portfolio-slide">
+                        <div class="portfolio-image">
+                            <img src="images/work/24.webp" alt="Ringhiera in legno Roma" width="400" height="300" loading="lazy">
+                            <div class="portfolio-overlay">
+                                <span class="portfolio-category">Falegnameria</span>
+                                <h4>Balaustra artigianale</h4>
+                                <p>Roma</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Slide 19 -->
+                    <div class="portfolio-slide">
+                        <div class="portfolio-image">
+                            <img src="images/work/25.webp" alt="Ringhiera decorativa in legno Roma" width="400" height="300" loading="lazy">
+                            <div class="portfolio-overlay">
+                                <span class="portfolio-category">Falegnameria</span>
+                                <h4>Ringhiera traforata</h4>
                                 <p>Roma</p>
                             </div>
                         </div>
@@ -932,7 +1065,7 @@
                             </div>
                             <div class="contact-text">
                                 <h4>Telefono</h4>
-                                <a href="tel:[TELEFONO]">[TELEFONO]</a>
+                                <a href="tel:+39 328 057 2349">+39 328 057 2349</a>
                             </div>
                         </div>
                         <div class="contact-item">
@@ -941,7 +1074,7 @@
                             </div>
                             <div class="contact-text">
                                 <h4>Email</h4>
-                                <a href="mailto:[EMAIL]">[EMAIL]</a>
+                                <a href="mailto:lozanazar84@gmail.com">lozanazar84@gmail.com</a>
                             </div>
                         </div>
                         <div class="contact-item">
@@ -972,7 +1105,7 @@
                 </div>
 
                 <div class="contact-form-wrapper" data-aos="fade-left">
-                    <form id="contact-form" class="contact-form" name="contatti" method="POST" action="/" data-netlify="true" netlify-honeypot="bot-field">
+                    <form id="contact-form" class="contact-form" name="contatti" method="POST" action="/" netlify data-netlify="true" netlify-honeypot="bot-field">
                         <!-- Campo nascosto per Netlify Forms -->
                         <input type="hidden" name="form-name" value="contatti">
                         <!-- Honeypot anti-spam nascosto -->
@@ -999,7 +1132,7 @@
                             <select id="service" name="service">
                                 <option value="">Seleziona un servizio</option>
                                 <option value="falegnameria">Falegnameria su Misura</option>
-                                <option value="cucina">Cucina in Legno</option>
+                                <option value="pergola">Pergole e Gazebo</option>
                                 <option value="scala">Scala in Legno</option>
                                 <option value="letto">Letto Artigianale</option>
                                 <option value="mobili">Mobili su Misura</option>
@@ -1071,11 +1204,11 @@
                         <ul>
                             <li>
                                 <i class="fas fa-phone-alt"></i>
-                                <a href="tel:[TELEFONO]">[TELEFONO]</a>
+                                <a href="tel:+39 328 057 2349">+39 328 057 2349</a>
                             </li>
                             <li>
                                 <i class="fas fa-envelope"></i>
-                                <a href="mailto:[EMAIL]">[EMAIL]</a>
+                                <a href="mailto:lozanazar84@gmail.com">lozanazar84@gmail.com</a>
                             </li>
                             <li>
                                 <i class="fas fa-map-marker-alt"></i>
@@ -1107,13 +1240,13 @@
         </button>
 
         <!-- WhatsApp Button -->
-        <a href="https://wa.me/39[TELEFONO]" class="sticky-whatsapp" aria-label="Scrivici su WhatsApp" target="_blank" rel="noopener">
+        <a href="https://wa.me/393280572349" class="sticky-whatsapp" aria-label="Scrivici su WhatsApp" target="_blank" rel="noopener">
             <i class="fab fa-whatsapp"></i>
             <span class="whatsapp-tooltip">Scrivici su WhatsApp!</span>
         </a>
 
         <!-- Sticky Phone Button -->
-        <a href="tel:[TELEFONO]" class="sticky-phone" aria-label="Chiamaci">
+        <a href="tel:+39 328 057 2349" class="sticky-phone" aria-label="Chiamaci">
             <i class="fas fa-phone-alt"></i>
             <span class="phone-tooltip">Chiamaci ora!</span>
         </a>
