--- a/servizi/costruzioni-ristrutturazioni.html
+++ b/servizi/costruzioni-ristrutturazioni.html
@@ -56,8 +56,8 @@
         "provider": {
             "@type": "HomeAndConstructionBusiness",
             "name": "Legno & Casa Roma",
-            "telephone": "[TELEFONO]",
-            "email": "[EMAIL]"
+            "telephone": "+39 328 057 2349",
+            "email": "lozanazar84@gmail.com"
         },
         "areaServed": ["Roma", "Prati", "Trastevere", "EUR", "Parioli", "Fiumicino", "Ciampino"],
         "description": "Costruzioni e ristrutturazioni complete a Roma. Impresa edile per appartamenti, villette e locali commerciali."
@@ -80,7 +80,7 @@
                 <li><a href="../guide.html" class="nav-link">Guide</a></li>
                 <li><a href="../index.html#contatti" class="nav-link">Contatti</a></li>
             </ul>
-            <a href="tel:[TELEFONO]" class="nav-cta">
+            <a href="tel:+39 328 057 2349" class="nav-cta">
                 <i class="fas fa-phone"></i>
                 <span>Chiama Ora</span>
             </a>
@@ -188,13 +188,6 @@
                         <h4 style="margin-bottom: 10px;">Locali commerciali</h4>
                         <p style="color: var(--gray-600); font-size: 14px;">Negozi, uffici, ristoranti</p>
                     </div>
-                    <div class="target-item" data-aos="fade-up" data-aos-delay="300" style="text-align: center; padding: 30px;">
-                        <div style="width: 70px; height: 70px; background: var(--primary); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 20px;">
-                            <i class="fas fa-bath" style="color: white; font-size: 28px;"></i>
-                        </div>
-                        <h4 style="margin-bottom: 10px;">Bagni e cucine</h4>
-                        <p style="color: var(--gray-600); font-size: 14px;">Rifacimento completo ambienti</p>
-                    </div>
                 </div>
             </div>
         </section>
@@ -265,11 +258,11 @@
                     <h2 style="font-size: 36px; margin-bottom: 20px;">Vuoi ristrutturare casa?</h2>
                     <p style="font-size: 18px; margin-bottom: 30px; opacity: 0.9;">Contattaci per un preventivo gratuito e senza impegno. Ti seguiamo dall'inizio alla fine.</p>
                     <div class="cta-buttons" style="display: flex; gap: 20px; justify-content: center; flex-wrap: wrap;">
-                        <a href="tel:[TELEFONO]" class="btn" style="background: white; color: var(--primary); padding: 15px 30px; border-radius: 8px; font-weight: 600; text-decoration: none; display: inline-flex; align-items: center; gap: 10px;">
+                        <a href="tel:+39 328 057 2349" class="btn" style="background: white; color: var(--primary); padding: 15px 30px; border-radius: 8px; font-weight: 600; text-decoration: none; display: inline-flex; align-items: center; gap: 10px;">
                             <i class="fas fa-phone"></i>
-                            <span>[TELEFONO]</span>
+                            <span>+39 328 057 2349</span>
                         </a>
-                        <a href="https://wa.me/39[TELEFONO]" class="btn" style="background: #25D366; color: white; padding: 15px 30px; border-radius: 8px; font-weight: 600; text-decoration: none; display: inline-flex; align-items: center; gap: 10px;">
+                        <a href="https://wa.me/393280572349" class="btn" style="background: #25D366; color: white; padding: 15px 30px; border-radius: 8px; font-weight: 600; text-decoration: none; display: inline-flex; align-items: center; gap: 10px;">
                             <i class="fab fa-whatsapp"></i>
                             <span>WhatsApp</span>
                         </a>
