--- a/servizi/pittura-decorazioni.html
+++ b/servizi/pittura-decorazioni.html
@@ -56,8 +56,8 @@
         "provider": {
             "@type": "HomeAndConstructionBusiness",
             "name": "Legno & Casa Roma",
-            "telephone": "[TELEFONO]",
-            "email": "[EMAIL]"
+            "telephone": "+39 328 057 2349",
+            "email": "lozanazar84@gmail.com"
         },
         "areaServed": ["Roma", "Prati", "Trastevere", "EUR", "Parioli", "Fiumicino", "Ciampino"],
         "description": "Decorazioni pareti, boiserie in legno, pittura decorativa e tinteggiature a Roma."
@@ -80,7 +80,7 @@
                 <li><a href="../guide.html" class="nav-link">Guide</a></li>
                 <li><a href="../index.html#contatti" class="nav-link">Contatti</a></li>
             </ul>
-            <a href="tel:[TELEFONO]" class="nav-cta">
+            <a href="tel:+39 328 057 2349" class="nav-cta">
                 <i class="fas fa-phone"></i>
                 <span>Chiama Ora</span>
             </a>
@@ -232,11 +232,11 @@
                     <h2 style="font-size: 36px; margin-bottom: 20px;">Vuoi rinnovare le tue pareti?</h2>
                     <p style="font-size: 18px; margin-bottom: 30px; opacity: 0.9;">Contattaci per un preventivo gratuito. Trasformiamo le tue pareti in opere d'arte.</p>
                     <div class="cta-buttons" style="display: flex; gap: 20px; justify-content: center; flex-wrap: wrap;">
-                        <a href="tel:[TELEFONO]" class="btn" style="background: white; color: var(--primary); padding: 15px 30px; border-radius: 8px; font-weight: 600; text-decoration: none; display: inline-flex; align-items: center; gap: 10px;">
+                        <a href="tel:+39 328 057 2349" class="btn" style="background: white; color: var(--primary); padding: 15px 30px; border-radius: 8px; font-weight: 600; text-decoration: none; display: inline-flex; align-items: center; gap: 10px;">
                             <i class="fas fa-phone"></i>
-                            <span>[TELEFONO]</span>
+                            <span>+39 328 057 2349</span>
                         </a>
-                        <a href="https://wa.me/39[TELEFONO]" class="btn" style="background: #25D366; color: white; padding: 15px 30px; border-radius: 8px; font-weight: 600; text-decoration: none; display: inline-flex; align-items: center; gap: 10px;">
+                        <a href="https://wa.me/393280572349" class="btn" style="background: #25D366; color: white; padding: 15px 30px; border-radius: 8px; font-weight: 600; text-decoration: none; display: inline-flex; align-items: center; gap: 10px;">
                             <i class="fab fa-whatsapp"></i>
                             <span>WhatsApp</span>
                         </a>
