--- a/index.html
+++ b/index.html
@@ -1105,13 +1105,7 @@
                 </div>
 
                 <div class="contact-form-wrapper" data-aos="fade-left">
-                    <form id="contact-form" class="contact-form" name="contatti" method="POST" action="/" netlify data-netlify="true" netlify-honeypot="bot-field">
-                        <!-- Campo nascosto per Netlify Forms -->
-                        <input type="hidden" name="form-name" value="contatti">
-                        <!-- Honeypot anti-spam nascosto -->
-                        <p class="hidden" style="display:none;">
-                            <label>Non compilare questo campo: <input name="bot-field"></label>
-                        </p>
+                    <form id="contact-form" class="contact-form" method="POST" action="https://formspree.io/f/mjggllzj">
                         <h3>Richiedi un Preventivo Gratuito</h3>
                         <div class="form-row">
                             <div class="form-group">
